# GZHReader

./: .gitignore  .impeccable.md  CHANGELOG.md  LICENSE  README.md  RELEASE_v2.0.0.md  THIRD_PARTY_NOTICES.md  config.example.yaml  config.yaml.bak  pyproject.toml
infra/wewe-rss/: docker-compose.mysql.yml  docker-compose.sqlite.yml
packaging/inno/: GZHReader.iss
packaging/pyinstaller/: GZHReader.spec
scripts/: build_release.ps1  build_wewe_rss.ps1  generate_brand_assets.py  register_task.ps1  run_pyinstaller.py  unregister_task.ps1
src/gzhreader/: __init__.py  article_fetcher.py  briefing.py  cli.py  config.py  console_entry.py  embedded_assets.py  frozen_entry.py  gui_entry.py  logging_utils.py  platform_utils.py  rss_client.py  rss_service.py  runtime_paths.py  scheduler.py  service.py  storage.py  summarizer.py  types.py  webapp.py  weread_bridge.py  wewe_rss.py
src/gzhreader/templates/: briefing.html  dashboard.html  error.html  home.html  layout.html  settings.html
src/gzhreader/templates/partials/: action_updates.html  advanced.html  briefings.html  docker_setup.html  flash.html  main_content.html  sidebar.html  status.html  top_chrome.html  wizard.html
tests/: test_article_fetcher.py  test_briefing.py  test_cli.py  test_config.py  test_logging_utils.py  test_rss_client.py  test_runtime_paths.py  test_scheduler.py  test_service.py  test_storage.py  test_summarizer.py  test_webapp.py  test_weread_bridge.py  test_wewe_rss.py
