[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gzhreader"
version = "0.2.0"
description = "RSS-based WeChat official account daily briefing generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "playwright>=1.52.0",
  "pydantic>=2.10.6",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "readability-lxml>=0.8.4.1",
  "typer>=0.15.1",
  "tzdata>=2025.2",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]
build = [
  "pyinstaller>=6.12",
]

[project.scripts]
gzhreader = "gzhreader.console_entry:main"
gzhreader-gui = "gzhreader.gui_entry:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gzhreader = ["templates/*.html", "templates/partials/*.html", "static/vendor/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --basetemp=.pytest_tmp"
testpaths = ["tests"]
